test/errors/error19.vult
fun foo () {
   val x = [1.0, 1];
}
